--- a/dogup/pom.xml
+++ b/dogup/pom.xml
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.19</maven.compiler.source>
+    <maven.compiler.target>1.19</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -24,6 +24,13 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>core</groupId>
+      <artifactId>core</artifactId>
+      <scope>system</scope>
+      <version>1.0</version>
+      <systemPath>${project.basedir}/libs/core.jar</systemPath>
     </dependency>
   </dependencies>
 
