Initial implemenntation of DodgUp

--- a/dodgeup/pom.xml
+++ b/dodgeup/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>dogup</artifactId>
+  <artifactId>dodgeup</artifactId>
   <version>1.0.0</version>
 
-  <name>dogup</name>
+  <name>dodgeup</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
